fixed distorted thumbnails in collections view

--- a/css/aa-styles.css
+++ b/css/aa-styles.css
@@ -608,3 +608,7 @@ h3[id^='file_label_'] {
 prm-thumbnail-list div[id^='thumbnail-']:hover > a > p {
 	font-weight: normal !important;
 }
+
+prm-search-result-thumbnail-container img {
+	width: auto;
+}
